--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
  "browser_action": {
    "default_icon": "icon-128.png",
-   "default_title": "Jump to Dynalist",
+   "default_title": "Jump to Dynalist [Unofficial]",
    "default_popup": "popup.html"  
  },
  "name": "Jump to Dynalist",
