Dealing with the Chrome Web Store

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
    "default_title": "Jump to Dynalist [Unofficial]",
    "default_popup": "popup.html"  
  },
- "name": "Jump to Dynalist",
+ "name": "Jump to Dynalist [Unofficial]",
  "description": "Opens links to the Dynalist Home Page and Forum, which open in new tabs. Leave any feedback here on the Dynalist Forum",
  "homepage_url": "http://dynalist.io",
  "icons": {
