--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
    "default_popup": "popup.html"  
  },
  "name": "Jump to Dynalist [Unofficial]",
- "description": "Opens links to the Dynalist Home Page and Forum, which open in new tabs. Leave any feedback here on the Dynalist Forum",
+ "description": "Opens links to the Dynalist Home Page and Forum, which open in new tabs. Leave any feedback here on the Dynalist Forum.",
  "homepage_url": "http://dynalist.io",
  "icons": {
      "16": "icon-16.png",
